...
                label = stringResource(R.string.text_search),
                onClick = {
                    onClose()
                    onSearch()
                },
                textColor = textColor,
                testTag = "SearchButton",
                modifier = Modifier.weight(1f),
            )
            DrawerActionButton(
                icon = Icons.Default.Keyboard,
                label = stringResource(R.string.toggle_keyboard),
                onClick = {
...
                label = stringResource(R.string.settings_button),
                onClick = {
                    onClose()
                    onSettings()
                },
                textColor = textColor,
                testTag = "SettingsButton",
                modifier = Modifier.weight(1f),
            )
        }
    }
}

...
